renamed plugin to grails-jslint

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Mon Feb 06 09:00:43 CST 2012
+#Tue Feb 07 20:39:51 CST 2012
 app.grails.version=2.0.0
-app.name=jslint
+app.name=grails-jslint
 app.version=1.0.0-SNAPSHOT
